[gd_scene load_steps=4 format=3 uid="uid://cymvq2mn58fh1"]

[ext_resource type="Script" path="res://scenes/GUI_component/character/creature_tile.gd" id="2_x826t"]
[ext_resource type="Texture2D" uid="uid://tccf4teu1kf5" path="res://art/GUI_components/life_bar_under.png" id="3_6rcys"]
[ext_resource type="Texture2D" uid="uid://3e386nwv2ig4" path="res://art/GUI_components/life_bar.png" id="3_n140g"]

[node name="icon" type="TextureRect"]
custom_minimum_size = Vector2(106, 106)
offset_right = 106.0
offset_bottom = 106.0
script = ExtResource("2_x826t")

[node name="weapon_icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = -16.0
offset_right = 122.0
offset_bottom = 44.0
mouse_filter = 2

[node name="life_bar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 88.0
offset_right = 86.0
offset_bottom = 99.0
mouse_filter = 2
value = 100.0
texture_under = ExtResource("3_6rcys")
texture_progress = ExtResource("3_n140g")
texture_progress_offset = Vector2(2, 2)

[node name="elt_icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(17, 17)
layout_mode = 0
offset_left = 88.0
offset_top = 87.0
offset_right = 105.0
offset_bottom = 104.0
mouse_filter = 2
expand_mode = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
